# FleuSSG

./: .gitignore  README.md  __init__.py  __main__.py  main.py  pyproject.toml
audit/: __init__.py  audit_logger.py  exporters.py
bench/: test_harness.py
core/: __init__.py  constants.py  data_types.py  ring_buffer.py
dashboard/: __init__.py  cli.py
ingestion/: __init__.py  engine.py  mock_telemetry.py
logging/: __init__.py  audit_logger.py  exporters.py
sanitization/: __init__.py  layer.py
simulation/: __init__.py  noise_models.py  test_harness.py
ssg/: __init__.py  __main__.py  cli.py  main.py
ssg/audit/: event_types.py  exporters.py
ssg/bench/: __init__.py  test_harness.py
ssg/core/: __init__.py  array_types.py  constants.py  data_types.py  pipeline_runtime.py
ssg/dashboard/: cli.py  layout.py  messages.py  rendering.py  runtime.py  snapshot.py
ssg/ingestion/: __init__.py  engine.py  mock_telemetry.py  polling.py
ssg/sanitization/: __init__.py  artifacts.py  filters.py  layer.py
ssg/simulation/: __init__.py  (+1 more)
tests/: test_audit_logger.py  test_dashboard.py  test_dashboard_cli.py  test_dashboard_rendering.py  test_dashboard_runtime.py  test_dashboard_snapshot.py  test_exporters.py  test_ingestion_engine.py  test_main.py  test_mock_telemetry.py  test_noise_models.py  test_package_api.py  test_pipeline_integration.py  test_pipeline_runtime_module.py  test_ring_buffer.py  test_sanitization_layer.py  test_spike_analysis.py  test_validation_engine.py  test_validation_engine_module.py
validation/: __init__.py  engine.py  spike_analysis.py
(+4 files in other folders)
